bison-parser/examples/ill_typed/bad7.sa
module X
       x : bool init false;
       c : clock;
       [a!] true @ c -> (x' = 4);
endmodule